feat(ui): make the mini player better